Attempt to fix backdrop filter blur on IOS

--- a/css/style.css
+++ b/css/style.css
@@ -1455,7 +1455,7 @@ body.dark .SobreMim .SobreMim-Content .descricao p {
     z-index: 1;
     padding: 20px;
     backdrop-filter: blur(25px);
-    -webkit-backdrop-filter: blur(25px);
+    -webkit-backdrop-filter: blur(5px);
     display: flex;
     flex-direction: column;
     justify-content: center;
